<resources>
    <string name="app_name">SoaringForecast</string>
    <string name="ok">OK</string>
    <string name="oops">Oops!</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="to">To</string>
    <string name="sixPlus">6+</string>
    <string name="tenPlus">10+</string>
    <string name="agl">\u0020AGL</string>
    <string name="format_float_one_decimal" formatted="false">"%1.1f"</string>
    <string name="format_temp_one_decimal" formatted="false">"%1.1f%2$s"</string>
    <string name="format_temp_in_parenthesis" formatted="false">(%1.1f%2$s)</string>
    <string name="aviation_gov_unspecified_error">Unspecified error occurred in receiving data from aviationweather.gov</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_airports">Add airports</string>
    <string name="action_satellite_images">Satellite</string>
    <string name="action_airport_weather">Airport Weather</string>
    <string name="action_airport_metar_taf">Airport Metar/TAF</string>
    <string name="action_airport_windy">Windy</string>
    <string name="action_soaring_forecasts">Soaring Forecasts</string>
    <string name="metar">METAR</string>
    <string name="metar_windDirection">Wind Direction:</string>
    <string name="metar_speed">Speed:</string>
    <string name="metar_windSpeed">Wind Speed:</string>
    <string name="metar_windGust">Gusts:</string>
    <string name="metar_visibility">Visibility:</string>
    <string name="metar_flightCategory">Flight Category:</string>
    <string name="metar_skyConditions">Sky Conditions:</string>
    <string name="metar_cloudBaseAgl">CloudBase(AGL):</string>
    <string name="metar_skyCover">Sky Cover:</string>
    <string name="metar_tempC">TempC:</string>
    <string name="metar_tempF">TempF:</string>
    <string name="metar_verticalVisibility">Vertical Visibility:</string>
    <string name="metar_metarType">MetarType:</string>
    <string name="metar_threeHrPressureTendencyMb">3 Hr Pressure Trend(Mb):</string>
    <string name="metar_seaLevelPressureMb">SeaLevel Pressure(Mb):</string>
    <string name="metar_wxString">WxString:</string>
    <string name="metar_elevation">El: %1$d%2$s</string>
    <string name="metar_temp">Temp:</string>
    <string name="metar_dewpoint">DewPoint:</string>
    <string name="metar_not_available">METAR not available or received</string>
    <string name="taf">TAF</string>
    <string name="taf_issued_at">Issued at:</string>
    <string name="taf_forecast">Forecast:</string>
    <string name="taf_forecast_type">Forecast Type:</string>
    <string name="taf_winds">Winds:</string>
    <string name="taf_visibility">Visibility:</string>
    <string name="taf_ceiling">Ceiling:</string>
    <string name="taf_clouds">Clouds:</string>
    <string name="taf_to">To</string>
    <string name="taf_wind_direction">Direction:</string>
    <string name="taf_wind_gusts">Gusts:</string>
    <string name="taf_valid_from">Valid From:</string>
    <string name="taf_valid_to">To</string>
    <string name="taf_weather">Weather:</string>
    <string name="taf_not_available">TAF not available or received</string>
    <string name="pref_raw_taf_metar_key" translatable="false">Raw_TAF_METAR_key</string>
    <string name="pref_display_raw_taf_metar">Display raw TAF/METAR</string>
    <string name="pref_decode_taf_metar_key" translatable="false">Decode_TAF_METAR_key</string>
    <string name="pref_decode_taf_metar_metar">Decode raw TAF/METAR</string>
    <string name="pref_add_windy_to_menu_key" translatable="false">Display_Windy_key</string>
    <string name="pref_add_windy_to_menu">Add Windy to Menu </string>
    <string name="pref_add_skysight_to_menu_key" translatable="false">Display_SkySight_key</string>
    <string name="pref_add_skysight_to_menu">Add SkySight to Menu </string>
    <string name="pref_add_dr_jacks_to_menu_key" translatable="false">Display_Dr_Jacks_key</string>
    <string name="pref_add_dr_jacks_to_menu">Add Dr. Jacks to Menu </string>
    <string name="pref_display_forecast_soundings_key" translatable="false">Display_forecast_soundings_key</string>
    <string name="pref_display_forecast_soundings">Display Sounding Locations</string>
    <string name="pref_display_forecast_sua_key" translatable="false">Display_forecast_sua_key</string>
    <string name="pref_display_forecast_sua">Display SUA</string>
    <string name="pref_display_turnpoints_key" translatable="false">Display_turnpoints_key</string>
    <string name="pref_display_turnpoints">Display Turnpoints</string>
    <string name="pref_display_turnpoint_satellite_view_key" translatable="false">Display_turnpoint_satellite_view_key</string>
    <string name="pref_display_turnpoint_satellite_view">Display Turnpoint Satellite View</string>
    <string name="pref_display_turnpoint_satellite_summary_text">On click on turnpoint on map</string>
    <string name="pref_display_turnpoint_infowindow_view_key" translatable="false">Display_turnpoint_infowindow_key</string>
    <string name="pref_display_turnpoint_infowindow_view">Display Turnpoint InfoWindow</string>
    <string name="pref_display_turnpoint_infowindow_summary_text">On click on turnpoint on map</string>
    <string name="pref_units_temp">Temperature</string>
    <string name="pref_units_temp_centigrade_label">Centigrade</string>
    <string name="pref_units_temp_fahrenheit_label">Fahrenheit</string>
    <string name="pref_units_temp_centigrade_value">C</string>
    <string name="pref_units_temp_fahrenheit_value">F</string>
    <string name="pref_units_altitude">Altitude</string>
    <string name="pref_units_altitude_meters_label">Meters</string>
    <string name="pref_units_altitude_feet_label">Feet</string>
    <string name="pref_units_altitude_meters_value">M</string>
    <string name="pref_units_altitude_feet_value">Ft</string>
    <string name="pref_units_wind_speed">Wind Speed</string>
    <string name="pref_units_speed_meters_label">Meters/Sec</string>
    <string name="pref_units_speed_knots_label">Knots</string>
    <string name="pref_units_speed_meters_value">m/sec</string>
    <string name="pref_units_speed_knots_value">kts</string>
    <string name="pref_units_distance">Distance</string>
    <string name="pref_units_distance_kilometer_label">Kilometers</string>
    <string name="pref_units_distance_statue_miles_label">Statue Miles</string>
    <string name="pref_units_distance_kilometers_value">KM</string>
    <string name="pref_units_distance_status_miles_value">SM</string>
    <string name="title_activity_airport_list">Airport List</string>
    <string name="enter_airport_codes">Enter airport codes using 4 character ICAO code leaving at least one space between each code:</string>
    <string name="airport_code_error">Airport codes must be 4 character ICAO code.</string>
    <string name="airport_code_entry_hint">eg. KBOS KORH</string>
    <string name="nav_drawer_metar_taf_label">METAR/TAF</string>
    <string name="nav_drawer_airport_list_label">Airport List</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_satellite_image">Satellite Image</string>
    <string name="satellite_image_time_utc_label">UTC:</string>
    <string name="satellite_image_time_local">(Local)</string>
    <string name="soaring_forecast_date">Date</string>
    <string name="soaring_forecast_time">Time</string>
    <string name="soaring_forecast_time_utc_label">UTC</string>
    <string name="soaring_forecast_time_local_label">(Local)</string>
    <string name="new_england_region" translatable="false">NewEngland</string>
    <string name="back_arrow">back arrow</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="loop">Loop</string>
    <string name="model_forecast_for_date_not_available">Oops. No model forecast found for specified dates.</string>
    <string name="airport_database_loaded_ok">Airport database loaded OK</string>
    <string name="airport_database_load_oops">Oops. Airport download failed. Will retry a bit later.</string>
    <string name="airport_database_oops_long_text">It might be the airport database is being refreshed on the server. Another download will be tried in a bit. </string>
    <string name="channel_name">Soaring Weather</string>
    <string name="channel_description">One source for soaring weather</string>
    <string name="download_of_airports_started">Download of airports started</string>
    <string name="airport_list">Airport List</string>
    <string name="search_for_airports_title">Search</string>
    <string name="airport_search">Airport Search</string>
    <string name="search_for">Search for …</string>
    <string name="finish">Finish</string>
    <string name="search_for_airports_hint">ICAO code, name, city, state</string>
    <string name="icao_added_for_metar_taf">%1$s added for METAR/TAF</string>
    <string name="rasp">RASP</string>
    <string name="noaa_satellite">NOAA Satellite</string>
    <string name="geos_satellite">GEOS Satellite</string>
    <string name="metar_taf_airports">METAR/TAF Airports</string>
    <string name="action_soaring_forecast_rasp">RASP</string>
    <string name="action_soaring_forecast_skysight">SkySight</string>
    <string name="action_soaring_options">Options</string>
    <string name="dr_jacks">Dr. Jacks</string>
    <string name="opacity_slider">Opacity</string>
    <string name="forecast_menu_toggle_sounds">Soundings</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="string_soaring_forecast_sounding_description">Soaring forecast sounding image by hour</string>
    <string name="pause">Pause</string>
    <string name="pause_loop_toggle">Pause/Loop toggle</string>
    <string name="turnpoint_files">Available Turnpoint Files</string>
    <string name="title_activity_turnpoints_import">TurnpointsImportActivity</string>
    <string name="import_turnpoints">Import Turnpoints</string>
    <string name="turnpoints">Turnpoints</string>
    <string name="no_turnpoint_files_found">No turnpoint files found. Would you like to download turnpoint files?</string>
    <string name="add_turnpoint">Add Turnpoint(s)</string>
    <string name="task_name">Task Name</string>
    <string name="distance">Distance:</string>
    <string name="task">Task:</string>
    <string name="forecast_menu_select_task">Select Task</string>
    <string name="forecast_menu_clear_task">Clear Task</string>
    <string name="turnpoint_menu_clear_turnpoint_database">Clear Turnpoint Database</string>
    <string name="select_region">Select Region</string>
    <string name="order_forecasts">Order Forecasts</string>
    <string name="map_background">Map Background</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="roadmap">Roadmap</string>
    <string name="hybrid">Hybrid</string>
    <string name="forecast_menu_display_options">Display Options</string>
    <string name="search_turnpoints">Search Turnpoints</string>
    <string name="turnpoint_edit_save">Save</string>
    <string name="turnpoint_edit_reset">Reset</string>
    <string name="add_new_turnpoint">Add Turnpoint</string>
    <string name="turnpoint_edit_delete">Delete turnpoint</string>
    <string name="add_export_turnpoints">Export Turnpoints</string>
    <string name="turnpoint_edit_export">Export</string>
    <string name="turnpoint_edit_email">Email</string>
    <string name="add_email_turnpoints">Email Turnpoints</string>
    <string name="turnpoint_edit_toggle_latlng_format">Toggle Lat/Long Format</string>
    <string name="one_800_wx_brief">Task Brief</string>
</resources>