<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/turnpoint_search"
        android:title="@string/search_turnpoints"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/turnpoint_menu_import"
        android:title="@string/import_turnpoints"
        app:showAsAction="never"/>
    <item android:id="@+id/turnpoint_menu_add_new_turnpoint"
        android:title="@string/add_new_turnpoint"
        app:showAsAction="never"/>
    app:showAsAction="never"/>
    <item android:id="@+id/turnpoint_menu_add_export_turnpoints"
        android:title="@string/add_export_turnpoints"
        app:showAsAction="never"/>
    <item android:id="@+id/turnpoint_menu_add_email_turnpoints"
        android:title="@string/add_email_turnpoints"
        app:showAsAction="never"/>
    <item android:id="@+id/turnpoint_menu_clear_turnpoints"
        android:title="@string/turnpoint_menu_clear_turnpoint_database"
        app:showAsAction="never"/>

</menu>