<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/turnpoint_edit_menu_edit"
        android:icon="@drawable/ic_mode_edit"
        app:showAsAction="always" />
    <item android:id="@+id/turnpoint_edit_menu_save"
        android:title="@string/turnpoint_edit_save"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item android:id="@+id/turnpoint_edit_menu_reset"
        android:title="@string/turnpoint_edit_reset"
        android:visible="false"
        app:showAsAction="never"/>
    <item android:id="@+id/turnpoint_edit_menu_toggle_latlng_format"
        android:title="@string/turnpoint_edit_toggle_latlng_format"
        app:showAsAction="never" />
    <item android:id="@+id/turnpoint_edit_menu_export"
        android:title="@string/turnpoint_edit_export"
        app:showAsAction="never" />
    <item android:id="@+id/turnpoint_edit_menu_email"
        android:title="@string/turnpoint_edit_email"
        app:showAsAction="never" />
    <item android:id="@+id/turnpoint_edit_menu_delete"
        android:title="@string/turnpoint_edit_delete"
        app:showAsAction="never"/>
</menu>