<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_units_temp_fahrenheit_label"
        android:entries="@array/pref_units_temp_labels"
        android:entryValues="@array/pref_units_temp_values"
        android:key="@string/pref_units_temp"
        android:title="@string/pref_units_temp"/>

    <ListPreference
        android:defaultValue="@string/pref_units_altitude_feet_label"
        android:entries="@array/pref_units_altitude_labels"
        android:entryValues="@array/pref_units_altitude_values"
        android:key="@string/pref_units_altitude"
        android:title="@string/pref_units_altitude"/>

    <ListPreference
        android:defaultValue="@string/pref_units_speed_knots_label"
        android:entries="@array/pref_units_speed_labels"
        android:entryValues="@array/pref_units_speed_values"
        android:key="@string/pref_units_speed"
        android:title="@string/pref_units_speed"/>


</PreferenceScreen>
