<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.fisincorporated.aviationweather.settings.SettingsActivity">

    <!-- TODO - add icons -->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_add_airport_codes"
            android:title="@string/action_add_airports"/>

        <item
            android:id="@+id/nav_menu_airport_weather"
            android:title="@string/action_airport_weather"
            />

        <item
            android:id="@+id/nav_menu_satellite_images"
            android:title="@string/action_satellite_images"
            />
        <item
            android:id="@+id/nav_menu_soaring_forecasts"
            android:title="@string/action_soaring_forecasts"
            />


    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_display_options"
            android:title="@string/action_settings"
            />

    </group>

</menu>




