<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <data class="EditTaskView">

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="org.soaringforecast.rasp.task.edit.TaskAndTurnpointsViewModel"/>

        <import type="java.lang.Integer"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_task_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/edit_task_taskname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/task"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_task_task_name"
            app:layout_constraintStart_toStartOf="parent"

            />

        <EditText
            android:id="@+id/edit_task_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_double"
            android:layout_marginEnd="@dimen/margin_standard"
            android:hint="@string/task_name"
            android:inputType="text"
            android:text="@={viewModel.taskName}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_task_taskname_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sterling Claremont Southbridge"

            />


        <TextView
            android:id="@+id/edit_task_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/distance"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@+id/edit_task_distance"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/edit_task_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@{String.format(@string/distance_km,safeUnbox(viewModel.taskDistance))}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toEndOf="@+id/edit_task_distance_label"
            app:layout_constraintTop_toBottomOf="@+id/edit_task_task_name"
            tools:text="300km"/>

        <TextView
            android:id="@+id/edit_task_turnpoints_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/turnpoints"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toEndOf="@+id/edit_task_distance_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_task_distance"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/edit_task_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_double"
            app:layout_constraintBottom_toTopOf="@+id/edit_task_add_turnpoints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_task_turnpoints_label"
            />

        <Button
            android:id="@+id/edit_task_add_turnpoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonPrimaryWhite"
            android:textColor="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_turnpoint"
            android:layout_margin="@dimen/margin_standard"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_task_save_task"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_double"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.saveTask()}"
            android:scaleType="fitXY"
            android:visibility="@{safeUnbox(viewModel.needToSaveUpdates) ? View.VISIBLE : View.GONE}"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="@{safeUnbox(viewModel.working) ? View.VISIBLE : View.GONE}"
            />

    </android.support.constraint.ConstraintLayout>
</layout>